fix horizontal alignment of header toolbar buttons.

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -188,6 +188,10 @@ h1, h2, h3, h4, h5, h6 {
   .search-input-wrapper > div .icon {
     margin-top: 9px;
   }
+
+ .popover-region {
+    float: left;
+  }
 }
 
 /* Don't display switched role information in the user menu */
